<resources>
    <string name="app_name">Bitcoin Metrics</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="bitcoin_ticker_fragment_label">Bitcoin Metrics</string>

    <string name="usd">USD</string>
    <string name="usd_btc">USD/BTC</string>
    <string name="sync_symbol">&#8634;</string>
    <string name="bitcoin_symbol">&#x20BF;</string>
    <string name="dash">-</string>
    <string name="elipsis">…</string>
    <string name="updating_metrics">updating metrics…</string>
    <string name="fail_contact_cg_server">problem contacting coingecko.com…</string>
    <string name="fail_contact_gn_server">problem contacting api.glassnode.com…</string>
    <string name="bad_cg_server_response">bad response from coingecko.com</string>
    <!--<string name="bad_gn_server_response">bad response from api.glassnode.com</string>-->
    <string name="category_market">Market</string>
    <string name="category_on_chain">On-Chain</string>
    <string name="category_indicators">Indicators</string>
    <string name="category_institutions">Institutions</string>
    <string name="market_cap">Market Cap</string>
    <string name="value">Value</string>
    <string name="day_volume">24h Volume</string>
    <string name="addr_new">Addr. New</string>
    <string name="addr_active">Addr. Active</string>
    <string name="fee_median">Fees Median</string>
    <string name="fee_mean">Fees Mean</string>
    <string name="fee_total">Fees Total</string>
    <string name="hodl_1yr">Hodl 1Year</string>
    <string name="sopr">SOPR</string>
    <string name="btcc_hold">BTCC Hlds</string>
    <string name="delta_day">dΔ%</string>
    <string name="delta_week">wΔ%</string>
    <string name="delta_month">mΔ%</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="update_frequency">Update frequency</string>
    <string name="apply">Apply</string>
    <string name="bg_color">Background color</string>

    <!-- Widget -->
    <string name="widget_description">Simple Bitcoin Price Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="configure_widget">Configure Widget</string>

    <string name="reload_widget">reload widget</string>
    <string name="background_transparency">Background transparency</string>
    <string name="color">Color</string>



</resources>
